Bug 1624080 - Simplify the implementation of HasAuthorSpecifiedRules. r=heycam
This patch computes the author-specified properties during the CSS cascade, and
removes the complex rule-tree-based implementation that tries to do the cascade
again.

This changes behavior in two ways, one of them which is not observable to
content, I believe:

 * revert now re-enables the native styling. This was brought up in
   https://github.com/w3c/csswg-drafts/issues/4777 and I think it is a bug-fix.

   This is observable to content, and I'm adding a test for it.

 * We don't look at inherited styles from our ancestors when `inherit` is
   specified in a non-author stylesheet. This was introduced for bug 452969 but
   we don't seem to inherit background anymore for file controls or such. It
   seems back then file controls used to have a text-field.

   I audited forms.css and ua.css and we don't explicitly inherit
   padding / border / background-color into any nested form control.

We keep the distinction between border/background and padding, because the later
has some callers. I think we should try to align with Chromium in the long run
and remove the padding bit.

We need to give an appearance to the range-thumb and such so that we can assert
that we don't call HasAuthorSpecifiedRules on non-themed stuff. I used a new
internal value for that.

Differential Revision: https://phabricator.services.mozilla.com/D67722

UltraBlame original commit: ac0d06c0ca9330d5356717094910e977cf8f6c29

--- a/layout/style/res/forms.css
+++ b/layout/style/res/forms.css
@@ -909,6 +909,7 @@ input[type=range]::-moz-focus-outer {
 
 
 input[type=range]::-moz-range-track {
+  -moz-appearance: range-track !important;
   
   display: block !important;
   float: none !important;
@@ -934,6 +935,7 @@ input[type=range][orient=vertical]::-moz-range-track {
 
 
 input[type=range]::-moz-range-progress {
+  -moz-appearance: range-progress !important;
   
   display: block !important;
   float: none !important;
